@@ -1,0 +1,16 @@
+<!DOCTYPE HTML>
+<!-- Test based on that found at 
+     http://philip.html5.org/tests/canvas/suite/tests/index.2d.transformation.transform.html
+
+     After the non-invertible transform the fillRect call should have no effect
+  -->
+<title>Canvas test: 2d.transformation.transform.non-invertible</title>
+<canvas id="canvas" class="output" width="100" height="100"><p class="fallback">FAIL (fallback content)</p></canvas>
+<script>
+var ctx = document.getElementById("canvas").getContext("2d");
+ctx.fillStyle = '#0f0';
+ctx.fillRect(0, 0, 100, 100);
+ctx.transform(0,0, 0,0, 0,0);
+ctx.fillStyle = '#f00';
+ctx.fillRect(0, 0, 100, 100);
+</script>
